--- a/index.html
+++ b/index.html
@@ -12,18 +12,19 @@
 
 <body>
     <div class="greetings">
-        <span>H</span>
+        <span>J</span>
         <span>o</span>
-        <span>l</span>
-        <span>a</span>
-        <span>!</span>
+        <span>s</span>
+        <span>e</span>
+        <span>p</span>
+        <span>h</span>
     </div>
     <div class="description">
-        <span>ESTE DETALLE ES PARA TI :)</span>
+        <span>Hola amor ❤️</span>
     </div>
     <div class="button">
         <button class="botones">
-            <a href="flower.html" style="color: #fff;">CLICK AQUÍ</a>
+            <a href="flower.html" style="color: #fff;">Pulsa Aqui</a>
         </button>
     </div>
 
